# substrate-node-template

./: .gitignore  README.md  conclusions.md  polkadot-treasury-demo.md
node/: Cargo.toml
node/src/: chain_spec.rs  main.rs  members_config.rs
primitives/: Cargo.toml
primitives/src/: lib.rs
runtime/: Cargo.toml
runtime/src/: constants.rs  impls.rs  lib.rs
