[package]
name = "node-primitives"
version = "1.0.0"
edition = "2018"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies.sp-core]
default-features = false
version = '2.0.0-alpha.5'

[dependencies.sp-runtime]
default-features = false
version = '2.0.0-alpha.5'

[features]
default = ["std"]
std = [
	"sp-core/std",
	"sp-runtime/std",
]
