[package]
name = "node-primitives"
version = "1.0.0"
edition = "2018"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies.sp-application-crypto]
git = 'https://github.com/paritytech/substrate.git'
default-features = false
tag = 'v2.0.0-alpha.7'

[dependencies.sp-core]
git = 'https://github.com/paritytech/substrate.git'
default-features = false
tag = 'v2.0.0-alpha.7'

[dependencies.sp-runtime]
git = 'https://github.com/paritytech/substrate.git'
default-features = false
tag = 'v2.0.0-alpha.7'

[features]
default = ["std"]
std = [
	"sp-application-crypto/std",
	"sp-core/std",
	"sp-runtime/std",
]
